# flask-vite

./: .cruft.json  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  TODO.md  cliff.toml  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  tox.ini
.builds/: ubuntu-2404.yml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
demo/: Makefile  Procfile  README.md  app.py
demo/templates/: card.j2  home.j2
demo/vite/: package.json  postcss.config.js  tailwind.config.js
src/flask_vite/: __init__.py  cli.py  extension.py  npm.py  tags.py
src/flask_vite/cruft/: bs.config.js  package.json  postcss.config.js  tailwind.config.js
src/flask_vite/starter/: .gitignore  index.html  main.js  package.json  tailwind.config.js  vite.config.js
tests/: __init__.py  test_flask_vite.py  test_run_pyanalize.py
